--- a/1.21.8/gradle.properties
+++ b/1.21.8/gradle.properties
@@ -3,23 +3,23 @@ org.gradle.daemon=false
 copyBuildJar=true
 
 # Mod Attributes
-modId=examplemod
-modName=Example Mod
+modId=enchantmentinsights
+modName=Enchantment Insights
 modVersion=21.8.0
 modAuthor=Fuzs
-modDescription=Example description.
+modDescription=Know what each enchantment does just by hovering with helpful enchantment descriptions in tooltips.
 modLicense=MPL-2.0
-modSourceUrl=https://github.com/Fuzss/examplemod
-modIssueUrl=https://github.com/Fuzss/examplemod/issues
-modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/examplemod.json
-modMavenGroup=fuzs.examplemod
+modSourceUrl=https://github.com/Fuzss/enchantmentinsights
+modIssueUrl=https://github.com/Fuzss/enchantmentinsights/issues
+modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/enchantmentinsights.json
+modMavenGroup=fuzs.enchantmentinsights
 # "MATCH_VERSION" for a mod required on both sides, "IGNORE_SERVER_VERSION" for a server-only mod, "IGNORE_ALL_VERSION" for a client-only mod
 modForgeDisplayTest=MATCH_VERSION
 # "*" for a mod loaded on both sides, "server" for a server-only mod, "client" for a client-only mod
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.8-v5
+dependenciesVersionCatalog=1.21.8-v8
 #dependenciesPuzzlesLibVersion=21.8.0
 #dependenciesMinPuzzlesLibVersion=21.8.0
 
