--- a/1.21.8/gradle.properties
+++ b/1.21.8/gradle.properties
@@ -7,7 +7,7 @@ modId=enchantmentinsights
 modName=Enchantment Insights
 modVersion=21.8.1
 modAuthor=Fuzs
-modDescription=Know what each enchantment does just by hovering with helpful enchantment descriptions in tooltips.
+modDescription=Pretty enchantment tooltips with colorful names and clear descriptions. No mystery, just magic!
 modLicense=MPL-2.0
 modSourceUrl=https://github.com/Fuzss/enchantmentinsights
 modIssueUrl=https://github.com/Fuzss/enchantmentinsights/issues
@@ -25,8 +25,8 @@ dependenciesVersionCatalog=1.21.8-v9
 
 # Mod Publishing
 projectReleaseType=release
-projectCurseForgeId=0
-projectModrinthId=0
+projectCurseForgeId=1366848
+projectModrinthId=xLSpHE43
 
 # Required Dependencies
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
